// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CoverLayer browserless image should handle contentPosition 1`] = `
<style>
  .imageContent__1njb2f {  top:0;  left: 0;  pointer-events: none;  }  .imageSource__1njb2f {  width: 100%;  height: 100%;  object-fit: cover;  object-position: bottom right;  }
</style>
<picture class="imageContent__1njb2f fixed"
         aria-hidden="true"
>
  <img class="imageSource__1njb2f"
       src="https://example.org/img.jpg"
       alt
  >
</picture>
`;

exports[`CoverLayer browserless image should handle position 1`] = `
<style>
  .imageContent__1njb2f {  top:0;  left: 0;  pointer-events: none;  }  .imageSource__1njb2f {  width: 100%;  height: 100%;  object-fit: cover;  object-position: top center;  }
</style>
<picture class="imageContent__1njb2f fixed"
         aria-hidden="true"
>
  <img class="imageSource__1njb2f"
       src="https://example.org/img.jpg"
       alt
  >
</picture>
`;

exports[`CoverLayer browserless image should render simple img 1`] = `
<style>
  .imageContent__1njb2f {  top:0;  left: 0;  pointer-events: none;  }  .imageSource__1njb2f {  width: 100%;  height: 100%;  object-fit: cover;  object-position: top center;  }
</style>
<picture class="imageContent__1njb2f fixed"
         aria-hidden="true"
>
  <img class="imageSource__1njb2f"
       src="https://example.org/img.jpg"
       alt
  >
</picture>
`;

exports[`CoverLayer browserless image should render srcset img 1`] = `
<style>
  .imageContent__1njb2f {  top:0;  left: 0;  pointer-events: none;  }  .imageSource__1njb2f {  width: 100%;  height: 100%;  object-fit: cover;  object-position: top center;  }
</style>
<picture class="imageContent__1njb2f fixed"
         aria-hidden="true"
>
  <source class="imageSource__1njb2f"
          srcset="https://example.org/img.webp"
          type="image/webp"
  >
  <source class="imageSource__1njb2f"
          srcset="https://example.org/img.jpg"
          type="image/jpeg"
  >
  <img class="imageSource__1njb2f"
       src="https://example.org/img.jpg"
       alt
  >
</picture>
`;

exports[`CoverLayer browserless image should render stop list img 1`] = `
<style>
  .imageContent__1njb2f {  top:0;  left: 0;  pointer-events: none;  }  .imageSource__1njb2f {  width: 100%;  height: 100%;  object-fit: cover;  object-position: top center;  }
</style>
<picture class="imageContent__1njb2f fixed"
         aria-hidden="true"
>
  <source class="imageSource__1njb2f"
          srcset="https://example.org/img-1920.jpg"
          media="(min-width: 1920px)"
  >
  <source class="imageSource__1njb2f"
          srcset="https://example.org/img-1536.jpg"
          media="(min-width: 1536px)"
  >
  <source class="imageSource__1njb2f"
          srcset="https://example.org/img-1366.jpg"
          media="(min-width: 1366px)"
  >
  <img class="imageSource__1njb2f"
       src="https://example.org/img-1280.jpg"
       alt
  >
</picture>
`;

exports[`CoverLayer browserless image should render stop srcset list img 1`] = `
<style>
  .imageContent__1njb2f {  top:0;  left: 0;  pointer-events: none;  }  .imageSource__1njb2f {  width: 100%;  height: 100%;  object-fit: cover;  object-position: top center;  }
</style>
<picture class="imageContent__1njb2f fixed"
         aria-hidden="true"
>
  <source class="imageSource__1njb2f"
          srcset="https://example.org/img-1920.webp"
          type="image/webp"
          media="(min-width: 1920px)"
  >
  <source class="imageSource__1njb2f"
          srcset="https://example.org/img-1920.jpg"
          type="image/jpeg"
          media="(min-width: 1920px)"
  >
  <source class="imageSource__1njb2f"
          srcset="https://example.org/img-1536.webp"
          type="image/webp"
          media="(min-width: 1536px)"
  >
  <source class="imageSource__1njb2f"
          srcset="https://example.org/img-1536.jpg"
          type="image/jpeg"
          media="(min-width: 1536px)"
  >
  <source class="imageSource__1njb2f"
          srcset="https://example.org/img-1366.webp"
          type="image/webp"
          media="(min-width: 1366px)"
  >
  <source class="imageSource__1njb2f"
          srcset="https://example.org/img-1366.jpg"
          type="image/jpeg"
          media="(min-width: 1366px)"
  >
  <source class="imageSource__1njb2f"
          srcset="https://example.org/img-1280.webp"
          type="image/webp"
  >
  <source class="imageSource__1njb2f"
          srcset="https://example.org/img-1280.jpg"
          type="image/jpeg"
  >
  <img class="imageSource__1njb2f"
       src="https://example.org/img-1280.jpg"
       alt
  >
</picture>
`;

exports[`CoverLayer browserless should render empty result with no args 1`] = `""`;

exports[`CoverLayer browserless video should handle contentPosition 1`] = `
<style>
  .imageContent__1njb2f {  top:0;  left: 0;  pointer-events: none;  }  .imageSource__1njb2f {  width: 100%;  height: 100%;  object-fit: cover;  object-position: bottom right;  }
</style>
<picture class="imageContent__1njb2f fixed"
         aria-hidden="true"
>
  <img class="imageSource__1njb2f"
       src="https://example.org/video.mp4"
       alt
  >
</picture>
`;

exports[`CoverLayer browserless video should handle position 1`] = `
<style>
  .imageContent__1njb2f {  top:0;  left: 0;  pointer-events: none;  }  .imageSource__1njb2f {  width: 100%;  height: 100%;  object-fit: cover;  object-position: top center;  }
</style>
<picture class="imageContent__1njb2f fixed"
         aria-hidden="true"
>
  <img class="imageSource__1njb2f"
       src="https://example.org/video.mp4"
       alt
  >
</picture>
`;

exports[`CoverLayer browserless video should render simple video 1`] = `
<style>
  .videoContent__1njb2f {  top: 0;  left: 0;  pointer-events: none;  object-fit: cover;  object-position: top center;  }  .videoContent__1njb2f::-webkit-media-controls {  display: none;  }
</style>
<video class="videoContent__1njb2f fixed"
       loop
       muted
       autoplay
       playsinline
       preload="auto"
       pip="false"
       aria-hidden="true"
>
  <source class="videoSource__1njb2f"
          src="https://example.org/video.mp4"
  >
</video>
`;

exports[`CoverLayer browserless video should render srcset video 1`] = `
<style>
  .videoContent__1njb2f {  top: 0;  left: 0;  pointer-events: none;  object-fit: cover;  object-position: top center;  }  .videoContent__1njb2f::-webkit-media-controls {  display: none;  }
</style>
<video class="videoContent__1njb2f fixed"
       loop
       muted
       autoplay
       playsinline
       preload="auto"
       pip="false"
       aria-hidden="true"
>
  <source src="https://example.org/video.webm"
          type="video/webm; codecs=&quot;vp8&quot;"
  >
  <source src="https://example.org/video.mp4"
          type="video/mp4; codecs=&quot;avc1&quot;"
  >
</video>
`;
